# calibrated-quasi-planar-photometric-stereo

./: .gitignore  Cargo.toml  README.md
cal-qp-ps-bin/: Cargo.toml
cal-qp-ps-bin/src/: main.rs
cal-qp-ps-lib/: Cargo.toml
cal-qp-ps-lib/src/: camera.rs  crop.rs  interop.rs  lib.rs  normal_integration.rs  pps.rs  utils.rs
cal-qp-ps-wasm/: Cargo.toml  README.md
cal-qp-ps-wasm/src/: lib.rs  utils.rs
web-elm/: README.md  elm.json
web-elm/review/: elm.json
web-elm/review/src/: ReviewConfig.elm
web-elm/src/: CropForm.elm  Device.elm  GlView.elm  Icon.elm  Main.elm  NumberInput.elm  Style.elm
web-elm/static/: .gitignore  font.css  idb.js  index.html  main.js  pkg  ports.js  utils.js  worker.mjs
