[package]
name = "cal-qp-ps-lib"
version = "0.1.0"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.23.1"
image = "0.23.12"
itertools = "0.9"
thiserror = "1.0.29"
